--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -5,7 +5,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+  workflow_dispatch:
+    branches: [ "main" ]
+  
 jobs:
   build:
 
@@ -13,7 +15,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.9, 3.10]
+        python-version: [3.9]
 
     steps:
     - uses: actions/checkout@v3
