update packaging files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,3 @@
 include LICENSE
 include README.rst
-recursive include dialogform/static *
-recursive include dialogform/templates *
+exclude manage.py
