--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,33 +1,36 @@
 [build-system]
-requires = ["setuptools"]
+requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.dynamic]
+version = {attr = "dialogform.VERSION"}
+readme = {file = ["README.rst"]}
 
 [project]
 name = "django-dialogform"
-version = "0.0.1"
 description='Django app to load and open form views within dialog element popups'
-readme = "README.rst"
+authors = [
+  {name = "Zoltan Kemenczy", email = "gugliposta@gmail.com"},
+]
 requires-python = ">=3.8"
 keywords = ["dialog","form"]
 license = {text = "GNU General Public License v3 (GPLv3)"}
 classifiers = [
-  'Development Status :: 5 - Production/Stable',
+  'Development Status :: 4 - Beta',
   'Environment :: Web Environment',
   'Framework :: Django',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
   'Operating System :: OS Independent',
   'Programming Language :: Python',
-  'Programming Language :: Python :: 3.8',
-  'Programming Language :: Python :: 3.9',
-  'Programming Language :: Python :: 3.10',
   'Programming Language :: Javascript',
   'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
 ]
 dependencies = [
-  "requests",
-  'importlib-metadata; python_version<"3.8"',
-  'django>=4.1.1',
+  'django>=4.1',
 ]
-dynamic = ["version"]
+dynamic = ["version", "readme"]
 
+[project.urls]
+homepage = "https://github.com/zoltan-ky/django-dialogform"
+repository = "https://github.com/zoltan-ky/django-dialogform"
