--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
+requires = [
+  "setuptools", "setuptools-scm",
+  "selenium", "webdriver-manager",
+]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.dynamic]
