--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,5 @@
 [build-system]
-requires = [
-  "setuptools", "setuptools-scm",
-  "selenium", "webdriver-manager",
-]
+requires = ["setuptools", "setuptools-scm","selenium", "webdriver-manager"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.dynamic]
