Fixing build-system dependecies....

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,5 @@ jobs:
         pip install -r requirements
     - name: Run Tests
       run: |
+        pip install -r testing_requirements
         python manage.py test
