switch to BasicTests for github builds - can't seem to run selenium webdriver.Chrome tests

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,5 +29,4 @@ jobs:
         pip install -r requirements
     - name: Run Tests
       run: |
-        pip install -r testing_requirements
-        python manage.py test
+        python manage.py test dialogform.demo.tests.BasicTest
