switch to BasicTests for github builds - can't seem to run selenium webdriver.Chrome tests..3

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Run Tests
       run: |
         pip install -r testing_requirements
-        python manage.py test dialogform.demo.tests.BasicTest
+        python manage.py test dialogform.demo.tests.BasicTests
