--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ classifiers = [
   'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
   'Operating System :: OS Independent',
   'Programming Language :: Python',
+  'Programming Language :: Python :: 3',
   'Programming Language :: JavaScript',
   'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
 ]
