--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers = [
   'Development Status :: 4 - Beta',
   'Environment :: Web Environment',
   'Framework :: Django',
+  'Framework :: Django :: 4',
   'Intended Audience :: Developers',
   'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
   'Operating System :: OS Independent',
